# proy_patricio

./: README.md
docs/: Test-checklist-03.docx
my_world/: CMakeLists.txt  package.xml
patricio/: CMakeLists.txt  package.xml
patricio_calamar/: package.xml  setup.cfg  setup.py
patricio_calamar/launch/: calamar.launch.py
patricio_calamar/patricio_calamar/: juego_calamar_node.py
patricio_calamar/test/: test_copyright.py  test_flake8.py  test_pep257.py
patricio_captacion/: package.xml  setup.cfg  setup.py
patricio_captacion/launch/: vision.launch.py
patricio_captacion/patricio_captacion/: vision_node.py  webcam_publisher.py  webcam_publisher_linux.py
patricio_escondite/: package.xml  setup.cfg  setup.py
patricio_escondite/patricio_escondite/: escondite.py  escondite_service.py
patricio_interfaces/: CMakeLists.txt  package.xml
patricio_interfaces/srv/: IniciarEscondite.srv
patricio_mundo/: package.xml  setup.cfg  setup.py
patricio_my_world/: CMakeLists.txt  package.xml
patricio_my_world/launch/: house.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
patricio_my_world/models/Dining_Table/: model.sdf
patricio_my_world/models/Table_Marble/: model-1_4.sdf  model.sdf
patricio_my_world/models/Tv/: model.sdf
patricio_my_world/models/kumaeye/: model.sdf
patricio_my_world/models/turtlebot3_burger_cam/: model-1_4.sdf
patricio_my_world/params/: turtlebot3_burger_bridge.yaml
patricio_my_world/rviz/: my_map.yaml
patricio_my_world/scripts/: child_controller.py
patricio_my_world/src/: keyboard_teleop.cpp  robot_pose_display.cpp
patricio_my_world/worlds/: house.sdf  house.world
patricio_nav_punto/: package.xml  setup.cfg  setup.py
patricio_nav_punto/launch/: my_map_server.launch.py  my_navigation.launch.py  my_tb3_navigator.launch.py  prueba_mundo.launch.py
patricio_nav_punto/map/: house_map.pgm  house_map.yaml  my_map.pgm  my_map.yaml  prueba_mundo_map.pgm  prueba_mundo_map.yaml
patricio_nav_punto/param/: burger.yaml  burger.yaml:Zone.Identifier
patricio_nav_punto/worlds/: prueba_mundo.world
patricio_nav_ruta/: package.xml  setup.cfg  setup.py
patricio_pilla_pilla/launch/: pilla_pilla.launch.py
patricio_pilla_pilla/patricio_pilla_pilla/: pilla_pilla_node.py
patricio_web/: .env.example  admin.html  calamar_game.html  database.py  face_screen.html  index.html  login.html  migrate_incidencias_estado.sql  migrate_usuario_correo_unique.sql  patricio_api.py  patricio_api.py.bak  patricio_import_completo.sql  registro.html  requirements.txt  schema.sql  seed_usuarios_prueba.sql  usuario.html
patricio_web/css/: styles_admin.css  styles_face_screen.css  styles_index.css  styles_login.css  styles_registro.css  styles_usuario.css
patricio_web/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
patricio_web/js/: admin_incidencias.js  face_logic.js  historico_dia_usuario.js  ros_logic.js  script_admin.js  script_monitor.js  script_singup_login_logout.js  script_usuario.js
patricio_web/log/: latest_build
patricio_web/migrations/: 001_incidencias_estado.sql
patricio_web/scripts/: probar_db_api.sh
patricio_web/static/: arrancar_face_screen.sh  arrancar_web.sh
proy_patricio_alfabeto/: package.xml  setup.cfg  setup.py
proy_patricio_bailar/: package.xml  setup.cfg  setup.py
proy_patricio_cantar/: package.xml  setup.cfg  setup.py
proy_patricio_cara_pantalla/: package.xml  setup.cfg  setup.py
proy_patricio_chistes/: package.xml  setup.cfg  setup.py
proy_patricio_cuentos/: package.xml  setup.cfg  setup.py
proy_patricio_mates_simples/: package.xml  setup.cfg  setup.py
proy_patricio_pilla_pilla/: package.xml  setup.cfg  setup.py
proy_patricio_pollito_ingles/: package.xml  setup.cfg  setup.py
proy_patricio_reconocimiento_voz/: package.xml  setup.cfg  setup.py
proy_patricio_sensor_choque/: package.xml  setup.cfg  setup.py
