<?xml version="1.0"?>
<?xml-model href=http://download.ros.org/schema/package_format3.xsd schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>patricio</name>
 <version>2.1.4</version>
 <description>
 ROS 2 packages for Patricio Project
 </description>
 <maintainer email="amburet@epsg.upv.es">Adenor Buret</maintainer>
 <license>Apache 2.0</license>
 <url type="website">http://XXXXXXX</url>
 <url type="repository">https://github.com/CJMIDNIGHT/patricio</url>
 <url type="bugtracker">https://github.com/XXXXXX</url>
 <author email="amburet@epsg.upv.es">Adenor Buret</author>
 <buildtool_depend>ament_cmake</buildtool_depend>
 <exec_depend>patricio_mundo</exec_depend>
 <exec_depend>patricio_nav_punto</exec_depend>
<exec_depend>patricio_nav_ruta</exec_depend>
 <exec_depend>patricio_captacion</exec_depend>
 <export>
 <build_type>ament_cmake</build_type>
 </export>
</package> 