<?xml version="1.0"?>
<package format="3">
  <name>patricio_calamar</name>
  <version>0.0.0</version>
  <description>Juego del Calamar (Luz Roja, Luz Verde) con detección de movimiento por OpenCV</description>
  <maintainer email="adenor@todo.todo">adenor</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>