cmake_minimum_required(VERSION 3.8)
project(patricio_my_world)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(ros_gz_sim REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(gz_math_vendor REQUIRED)
find_package(gz_sim_vendor REQUIRED)


add_executable(keyboard_teleop src/keyboard_teleop.cpp)
ament_target_dependencies(keyboard_teleop rclcpp geometry_msgs)
install(TARGETS keyboard_teleop DESTINATION lib/${PROJECT_NAME})

add_executable(robot_pose_display src/robot_pose_display.cpp)
ament_target_dependencies(robot_pose_display rclcpp nav_msgs)
install(TARGETS robot_pose_display DESTINATION lib/${PROJECT_NAME})

install(
  DIRECTORY launch worlds rviz src include models params urdf
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
