<?xml version="1.0"?>
<package format="2">
  <name>patricio_my_world</name>
  <version>0.0.1</version>
  <description>Custom house world for patricio metapackage</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
